--- a/census/static/scss/_header.scss
+++ b/census/static/scss/_header.scss
@@ -105,7 +105,7 @@ body {
       }
 
       .menu {
-        $menu-h-padding: 10px;
+        $menu-h-padding: 6px;
         margin: 0;
         margin-left: -$menu-h-padding;
         padding: 0 0 0.5em 0;
